deprecation fix.